crates/wgso/tests/cases_invalid/invalid_workgroup_count/.expected
error: workgroup count is not a valid `u32` value
 --> ./tests/cases_invalid/invalid_workgroup_count/root.wgsl:1:18
  |
1 | #shader<compute, 9999999999999> test
  |                  ^^^^^^^^^^^^^
  |